fixed fileUploadButton, add button-text-alignment, fixed chart alignment

--- a/StatisticsCalculatorFrontend/src/app/app.component.css
+++ b/StatisticsCalculatorFrontend/src/app/app.component.css
@@ -4,6 +4,7 @@ input {
     height: 34px;
     font-size: 20;
     font-weight: light;
+    text-align: center;
 }
 
 /* Löschen/Starten Button */
