--- a/StatisticsCalculatorFrontend/src/app/view2-anzeige-stichproben/view2-anzeige-stichproben.component.css
+++ b/StatisticsCalculatorFrontend/src/app/view2-anzeige-stichproben/view2-anzeige-stichproben.component.css
@@ -42,3 +42,7 @@ input {
 #newData {
     margin-bottom: 60px;
 }
+
+#return {
+    margin-bottom: 30px;
+}
